<resources>
    <string name="app_name">Debt Organizer</string>
    <string name="myDebtors">My Debtors</string>
    <string name="myCreditors">My Creditors</string>
    <string name="total">Total</string>
    <string name="addNewDebtor">Add New Debtor</string>
    <string name="name">Name:</string>
    <string name="amount">Amount:</string>
    <string name="currency">Currency:</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alphabet">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="alphabetWithSpace">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="addnewdebtor">ADD NEW DEBTOR</string>
    <string name="addnewcreditor">ADD NEW CREDITOR</string>
</resources>
